--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li><a href="contact.html"></a>Contact</li>
             <li><a href="page.html"></a>Page</li>
         </ul>
+        <div class="body">
+            
+        </div>
     </div>
 </body>
 </html>
