--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="info">
             <img src="./img/pexels-hemanthnirujogi-3189980.jpg" alt="taken vy bolarinwa">
-            <div class="texts">The first game was played with a soccer ball and two peach baskets as goals [4]. Over time, the rules evolved, and the sport gained popularity worldwide. </div>
+            <div class="texts">The first game was played with a soccer ball and two peach baskets as goals. Over time, the rules evolved, and the sport gained popularity worldwide. </div>
         </div>
         <div class="info">
             <img src="./img/pexels-juakirijino-1089087.jpg" alt="taken vy bolarinwa">
@@ -47,9 +47,11 @@
             <div class="texts">Over time, the rules evolved, dribbling was introduced, and the sport became more structured. Today, basketball is played worldwide, with professional leagues like the NBA and FIBA organizing major tournaments.</div>
         </div>
     </div>
-    <div class="quote">"Pain doesn’t tell you when you ought to stop. Pain is the little voice in your head that tries to hold you back because it knows if you continue, you will change."
+    <div class="section">
+        <div class="quote">"Pain doesn’t tell you when you ought to stop. Pain is the little voice in your head that tries to hold you back because it knows if you continue, you will change."</div>
         <div class="quoter">-Kobe Bean Bryrant</div>
     </div>
+    
     <div class="bottom">
         <div class="extra">Ball is Life!
             <p>For more knowledge on basketball, click the button right there!</p>
